(events): implement disabled RSVP

--- a/ODK.Web.Razor/Views/Shared/Events/_EventRSVP.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventRSVP.cshtml
@@ -7,8 +7,13 @@
     Model.MembersByResponse.TryGetValue(EventResponseType.Yes, out var attendees);
     
     var spacesLeft = Model.SpacesLeft;
-    var canRsvp = Model.MemberResponse == EventResponseType.Yes
-        || ((spacesLeft == null || spacesLeft > 0) && !Model.Event.RsvpDeadlinePassed);
+    var canRsvp = 
+        Model.MemberResponse == EventResponseType.Yes || 
+        (
+            (spacesLeft == null || spacesLeft > 0) && 
+            !Model.Event.RsvpDeadlinePassed &&
+            !Model.Event.RsvpDisabled
+        );
 }
 
 <div class="card sidebar-card">
