--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventContent.cshtml
@@ -52,7 +52,7 @@
         RsvpDeadline = Model.Event.RsvpDeadlineUtc != null 
             ? Model.Chapter.ToChapterTime(Model.Event.RsvpDeadlineUtc.Value) 
             : null,
-        RsvpDisabled = Model.Event.RsvpDisabled ?? false,
+        RsvpDisabled = Model.Event.RsvpDisabled,
         TicketCost = Model.Event.TicketSettings?.Cost,
         TicketDepositCost = Model.Event.TicketSettings?.Deposit,
         Time = Model.Event.Time,
