--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
@@ -1,28 +1,14 @@
-﻿@using ODK.Core.Settings
-@using ODK.Services.Settings
+﻿@using ODK.Core.Chapters
 @using ODK.Web.Razor.Models.SuperAdmin
-@model ODK.Core.Chapters.Chapter
-@inject ISettingsService SettingsService
-@{
-    var settings = await SettingsService.GetSiteSettings();
-}
+@model Chapter
 
 <h2 class="d-none d-md-block">Instagram</h2>
-
-<form method="post" class="mb-3">
-    @*@Html.AntiForgeryToken()*@
-    @await Html.PartialAsync("SuperAdmin/_InstagramForm", new InstagramFormViewModel
-    {
-        ScraperUserAgent = settings.InstagramScraperUserAgent
-    })
-    <button class="btn btn-primary">Update</button>
-</form>
 
 <form method="post" action="/groups/@Model.Id/superAdmin/instagram/scrape">
     @*@Html.AntiForgeryToken()*@
     <button class="btn btn-secondary">Scrape</button>
 </form>
-<p class="text-muted">
+<p class="text-muted mt-3">
     Download the latest Instagram images into the database.
-    Don't do this too frequently otherwise the account will be temporarily suspended.
+    Don't do this too frequently to avoid rate limiting.
 </p>
