Explicitly associate site subscriptions with site features

--- a/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_UpgradeButton.cshtml
@@ -3,7 +3,7 @@
 @using ODK.Web.Razor.Models.Components
 @model UpgradeButtonViewModel
 
-<a href="@OdkRoutes.Account.Subscription(Model.Platform, Model.Chapter)" class="btn btn-outline-primary">
+<a href="@OdkRoutes.Account.Subscription(Model.Platform, Model.Chapter)" class="btn btn-outline-primary btn-sm">
     @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Unlock))
     <span>Upgrade to unlock</span>
 </a>
