--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionForm.cshtml
@@ -1,6 +1,9 @@
-﻿@using ODK.Services.Subscriptions
+﻿@using ODK.Core.Features
+@using ODK.Services.Subscriptions
+@using ODK.Web.Common.Extensions
+@using ODK.Web.Razor.Models.SuperAdmin
 @using ODK.Web.Razor.Services
-@model ODK.Web.Razor.Models.SuperAdmin.SiteSubscriptionFormViewModel
+@model SiteSubscriptionFormViewModel
 @inject IRequestStore RequestStore
 @inject ISiteSubscriptionAdminService SiteSubscriptionAdminService
 @{
@@ -65,18 +68,8 @@
     @Html.ValidationMessageFor(x => x.MemberLimit)
 </div>
 
-<div class="form-check mb-3">
-    @Html.CheckBoxFor(x => x.MemberSubscriptions, new { @class = "form-check-input" })
-    @Html.LabelFor(x => x.MemberSubscriptions, new { @class = "form-check-label" })
+<div class="form-group mb-3">
+    @Html.LabelFor(x => x.Features, new { @class = "form-label" })
+    @Html.OdkEnumListBoxFor(x => x.Features, new { @class = "form-control" })
+    @Html.ValidationMessageFor(x => x.Features)
 </div>
-
-<div class="form-check mb-3">
-    @Html.CheckBoxFor(x => x.SendMemberEmails, new { @class = "form-check-input" })
-    @Html.LabelFor(x => x.SendMemberEmails, new { @class = "form-check-label" })
-</div>
-
-<div class="form-check mb-3">
-    @Html.CheckBoxFor(x => x.Premium, new { @class = "form-check-input" })
-    @Html.LabelFor(x => x.Premium, new { @class = "form-check-label" })
-</div>
-
