SiteAdmins can go to any page; fix 403 error routing

--- a/ODK.Web.Razor/Pages/Errors/Error.cshtml
+++ b/ODK.Web.Razor/Pages/Errors/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Error/{statusCode}"
+﻿@page "/error/{statusCode}"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Extensions
