--- a/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
@@ -1,4 +1,5 @@
-﻿@using ODK.Services.Authentication
+﻿@using ODK.Core.Chapters
+@using ODK.Services.Authentication
 @using ODK.Web.Common.Components
 @using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
@@ -9,15 +10,26 @@
 @{
     var platform = RequestStore.Platform;
 
-    var adminChapters = Model.MemberChapters
-        .Where(x => Model.Member?.IsMemberOf(x.Id) == true)
-        .ToArray();
-
     var defaultChapter = Model.CurrentChapter != null && Model.Member != null && Model.Member.IsMemberOf(Model.CurrentChapter.Id)
         ? Model.CurrentChapter
         : Model.MemberChapters.FirstOrDefault();
 
     var isAdmin = User.IsInRole(OdkRoles.Admin);
+
+    var adminChapterDictionary = Model.AdminChapters
+        .ToDictionary(x => x.Id);
+
+    var memberChapterDictionary = Model.MemberChapters
+        .ToDictionary(x => x.Id);
+
+    var chapters = Model.MemberChapters
+        .Union(Model.AdminChapters)
+        .GroupBy(x => x.Id)
+        .ToDictionary(x => x.Key, x => x.First())
+        .Values
+        .OrderBy(x => x.GetDisplayName(platform))
+        .ToArray();
+
 }
 
 @if (Model.MemberChapters.Count > 0)
@@ -28,60 +40,69 @@
                 @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.User))
             </div>
             <div class="dropdown-menu dropdown-menu-end text-end">
-                @if (Model.MemberChapters.Count == 1)
+                @if (chapters.Length == 1)
                 {
-                    var memberChapter = Model.MemberChapters.First();
-                    var adminChapter = isAdmin ? adminChapters
-                        .FirstOrDefault(x => x.Id == memberChapter.Id) : null;
+                    var chapter = chapters.First();
+                    adminChapterDictionary.TryGetValue(chapter.Id, out var adminChapter);
+                    memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);                    
 
-                    <a class="dropdown-item" href="@OdkRoutes.Account.Index(memberChapter)">
-                        My profile
+                    @if (memberChapter != null)
+                    {
+                        <a class="dropdown-item" href="@OdkRoutes.Account.Index(chapter)">
+                            My profile
+                        </a>                        
+                    }
+                    
+                    <a class="dropdown-item" href="@OdkRoutes.Groups.Group(platform, chapter)">
+                        @chapter.GetDisplayName(platform)
                     </a>
-                    <a class="dropdown-item" href="@OdkRoutes.Groups.Group(platform, memberChapter)">
-                        @memberChapter.GetDisplayName(platform)
-                    </a>
-                    <a class="dropdown-item" href="/@memberChapter.ShortName/Account/Logout">
+
+                    <a class="dropdown-item" href="/@chapter.ShortName/Account/Logout">
                         Sign Out
                     </a>
                     
                     @if (adminChapter != null)
                     {
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/@adminChapter.ShortName/Admin/Chapter/Text">
-                            @adminChapter.GetDisplayName(platform) Admin
+                        <a class="dropdown-item" href="/@chapter.ShortName/admin/chapter/text">
+                            @chapter.GetDisplayName(platform) Admin
                         </a>
-                        <a class="dropdown-item" href="/@adminChapter.ShortName/Admin/Events/Create">Create event</a>
+                        <a class="dropdown-item" href="/@chapter.ShortName/admin/events/create">Create event</a>
                     }
                 }
-                else if (Model.MemberChapters.Count > 1)
+                else if (chapters.Length > 1)
                 {
-                    for (var i = 0; i < Model.MemberChapters.Count; i++)
+                    foreach (var chapter in chapters)
                     {
-                        var memberChapter = Model.MemberChapters.ElementAt(i);
-                        var adminChapter = isAdmin ? adminChapters
-                            .FirstOrDefault(x => x.Id == memberChapter.Id) : null;
+                        adminChapterDictionary.TryGetValue(chapter.Id, out var adminChapter);
+                        memberChapterDictionary.TryGetValue(chapter.Id, out var memberChapter);
 
                         <div class="dropdown dropstart">
                             <div class="dropdown-item dropdown-toggle" data-bs-toggle="dropdown">
-                                @memberChapter.GetDisplayName(platform)
+                                @chapter.GetDisplayName(platform)
                             </div>
                             <div class="dropdown-menu text-end">
-                                <a class="dropdown-item" href="@OdkRoutes.Groups.Group(platform, memberChapter)">
+                                <a class="dropdown-item" href="@OdkRoutes.Groups.Group(platform, chapter)">
                                     Home
                                 </a>
-                                <a class="dropdown-item" href="@OdkRoutes.Account.Index(memberChapter)">
-                                    My profile
-                                </a>
 
-                                @if (adminChapter != null)
+                                @if (memberChapter != null)
+                                {
+                                    <a class="dropdown-item" href="@OdkRoutes.Account.Index(chapter)">
+                                        My profile
+                                    </a>
+                                }                                
+
+                                @if (adminChapter != null || Model.Member?.SiteAdmin == true)
                                 {
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="/@adminChapter.ShortName/Admin/Chapter/Text">Admin</a>
-                                    <a class="dropdown-item" href="/@adminChapter.ShortName/Admin/Events/Create">Create event</a>
+                                    
+                                    <a class="dropdown-item" href="/@chapter.ShortName/Admin/Chapter/Text">Admin</a>
+                                    <a class="dropdown-item" href="/@chapter.ShortName/Admin/Events/Create">Create event</a>
 
                                     if (Model.Member?.SiteAdmin == true)
                                     {
-                                        <a class="dropdown-item" href="/@adminChapter.ShortName/admin/siteadmin">Site admin</a>
+                                        <a class="dropdown-item" href="/@chapter.ShortName/admin/siteadmin">Site admin</a>
                                     }
                                 }
                             </div>                            
