--- a/ODK.Web.Razor/Pages/SiteAdmin/FeatureCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SiteAdmin/FeatureCreate.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/siteadmin/features/create"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @model FeatureCreateModel
@@ -13,7 +14,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = "/siteadmin/features", Text = "Features" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Features, Text = "Features" },
         new MenuItem { Text = "New" }
     }
 })
