--- a/ODK.Web.Razor/Pages/SiteAdmin/Subscriptions/Subscription.cshtml
+++ b/ODK.Web.Razor/Pages/SiteAdmin/Subscriptions/Subscription.cshtml
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Subscriptions
 @using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @model SubscriptionModel
 @inject ISiteSubscriptionAdminService SiteSubscriptionAdminService
@@ -17,7 +18,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/siteadmin/subscriptions", Text = "Subscriptions" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Subscriptions, Text = "Subscriptions" },
         new MenuItem { Text = viewModel.Subscription.Name }
     }
 })
