--- a/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_AccountDropdown.cshtml
@@ -124,7 +124,7 @@
                 @if (Model.Member?.SiteAdmin == true)
                 {                                        
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/siteadmin">Site admin</a>
+                    <a class="dropdown-item" href="@OdkRoutes.SiteAdmin.Index">Site admin</a>
                 }
             </div>
         </div>
