--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountDropdown.cshtml
@@ -57,7 +57,7 @@
                 {
                     <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item dropdown-item--icon" href="/siteadmin">
+                    <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes.SiteAdmin.Index">
                         <span class="icon">
                             @await Html.PartialAsync("Components/_Icon", new IconViewModel(IconType.Wrench))
                         </span>
