--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_MessageContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_MessageContent.cshtml
@@ -10,7 +10,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/siteadmin/messages", Text = "Messages" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Messages, Text = "Messages" },
         new MenuItem { Text = "Reply" }
     }
 })
