--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_MessagesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_MessagesContent.cshtml
@@ -41,7 +41,7 @@
                         }
                     </td>
                     <td>
-                        <a href="/siteadmin/messages/@message.Id">View</a>
+                        <a href="@OdkRoutes.SiteAdmin.Message(message.Id)">View</a>
                     </td>
                     <td>
                         <form method="post" action="/siteadmin/messages/@message.Id/delete">
