--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_SiteAdminGroupsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_SiteAdminGroupsContent.cshtml
@@ -41,7 +41,7 @@
 
                             <tr>
                                 <td>
-                                    <a href="/siteadmin/groups/@chapter.Id">
+                                    <a href="@OdkRoutes.SiteAdmin.Group(chapter.Id)">
                                         @chapter.GetDisplayName(Model.Platform)
                                     </a>                                    
                                 </td>
