--- a/ODK.Web.Razor/Pages/SiteAdmin/Error.cshtml
+++ b/ODK.Web.Razor/Pages/SiteAdmin/Error.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/siteadmin/errors/{id:guid}"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @using ODK.Web.Razor.Models.SiteAdmin
@@ -14,7 +15,7 @@
 {
     Breadcrumbs = new []
     {
-        new MenuItem { Link = "/siteadmin/errors", Text = "Error log" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Errors, Text = "Error log" },
         new MenuItem { Text = "Error" }
     }
 })
