--- a/ODK.Web.Razor/Pages/SiteAdmin/Feature.cshtml
+++ b/ODK.Web.Razor/Pages/SiteAdmin/Feature.cshtml
@@ -2,6 +2,7 @@
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.SiteAdmin
 @model FeatureModel
@@ -14,7 +15,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/siteadmin/features", Text = "Features" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Features, Text = "Features" },
         new MenuItem { Text = Model.Feature.Name }
     }
 })
