--- a/ODK.Web.Razor/Pages/SiteAdmin/PaymentSettingsCreate.cshtml
+++ b/ODK.Web.Razor/Pages/SiteAdmin/PaymentSettingsCreate.cshtml
@@ -1,5 +1,6 @@
 ﻿@page "/siteadmin/payments/new"
 @using ODK.Web.Common.Components
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.SiteAdmin
 @using ODK.Web.Razor.Models.Components
 @model PaymentSettingsCreateModel
@@ -12,7 +13,7 @@
 {
     Breadcrumbs = new[]
     {
-        new MenuItem { Link = "/siteadmin/payments", Text = "Payments" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Payments, Text = "Payments" },
         new MenuItem { Text = "New" }
     }
 })
