--- a/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssuesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SiteAdmin/_IssuesContent.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ODK.Services.Issues.Models
+@using ODK.Web.Common.Routes
 @model IssuesAdminPageViewModel
 
 <h2>Issues</h2>
@@ -18,7 +19,7 @@
                 {
                     <tr>
                         <td>
-                            <a href="/siteadmin/issues/@issue.Id">@issue.Title</a>
+                            <a href="@OdkRoutes.SiteAdmin.Issue(issue.Id)">@issue.Title</a>
                         </td>
                         <td>@issue.Type</td>
                         <td>@issue.Status</td>
