--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPosts.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPosts.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ODK.Core.SocialMedia
-@using ODK.Web.Razor.Models.SocialMedia
+@using ODK.Services.SocialMedia.ViewModels
 @model InstagramPostsViewModel
 @{
     if (Model.Posts.Count == 0)
@@ -10,17 +10,9 @@
 
 <div class="row">
     @foreach (var post in Model.Posts)
-    {
-        var viewModel = new InstagramPostViewModel
-        {
-            Caption = post.Caption,
-            Chapter = Model.Chapter,
-            ExternalId = post.ExternalId,
-            InstagramPostId = post.Id
-        };
-
+    {        
         <div class="col-3 col-md-3">
-            @await Html.PartialAsync("Components/_InstagramPost", viewModel)
+            @await Html.PartialAsync("Components/_InstagramPost", post)
         </div>
     }
 </div>
