--- a/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_Icon.cshtml
@@ -50,6 +50,8 @@
         <i class="@Model.Class fa-solid fa-users-rectangle"></i>break;
     case IconType.Home:
         <i class="@Model.Class fa-solid fa-home"></i>break;
+    case IconType.Images:
+        <i class="@Model.Class fa-regular fa-images"></i>break;
     case IconType.Instagram:
         <i class="@Model.Class fa-brands fa-instagram"></i>break;
     case IconType.LocationPin:
